--- a/v-once/index.html
+++ b/v-once/index.html
@@ -10,8 +10,12 @@
   <script src="./js/script.js" defer></script>
 </head>
 <body>
+
   <div id="app">
-    <p>{{ message }}</p>
+    <p v-once>{{ message }}</p>
+    <button v-on:click="clickHandler">
+      Cluck!
+    </button>
   </div>
   
 </body>
