--- a/12-フォーム入力データバインディング/v-model利用時は、属性は無視される/index.html
+++ b/12-フォーム入力データバインディング/v-model利用時は、属性は無視される/index.html
@@ -12,8 +12,7 @@
 <body>
 
   <div id="app">
-  <button v-on:click.once="clickHandler">Now</button>
-  <p>{{ message }}</p>
+    <input type="text" v-model="message" value="hogehoge">
   </div>
   
 </body>
