--- a/12-フォーム入力データバインディング/セレクトボックス複数/index.html
+++ b/12-フォーム入力データバインディング/セレクトボックス複数/index.html
@@ -12,8 +12,7 @@
 <body>
 
   <div id="app">
-    <select v-model="selected">
-      <option disabled value="">Please select one</option>
+    <select v-model="selected" multiple>
       <option>Red</option>
       <option>Green</option>
       <option>Blue</option>
