コンポーネント動的処理

--- a/13- コンポーネントを使おう/動的な処理/index.html
+++ b/13- コンポーネントを使おう/動的な処理/index.html
@@ -12,9 +12,9 @@
 <body>
 
   <div id="app">
-    <button-counter></button-counter>
-    <button-counter></button-counter>
-    <button-counter></button-counter>
+    <hello-component></hello-component>
+    <hello-component></hello-component>
+    <hello-component></hello-component>
   </div>
   
 </body>
